--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "因为数据集太大，提交的是 zip 文件，初始需要运行以下代码获取完整数据："
+    "因为数据集太大，下载下来的是 zip 文件，初始需要运行以下代码获取完整数据："
    ]
   },
   {
